# emissor-nacional-cli

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_BACKLOG.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
config/: emitter.yaml.example
config/clients/: acme-corp.yaml.example  intermediary.yaml.example
src/emissor/: cli.py  config.py
src/emissor/models/: client.py  emitter.py  invoice.py
src/emissor/services/: adn_client.py  dps_builder.py  emission.py  exceptions.py  http_retry.py  sefin_client.py  xml_encoder.py  xml_signer.py
src/emissor/templates/: emitter.yaml.example
src/emissor/tui/: app.py  app.tcss  options.py
src/emissor/tui/screens/: clients.py  confirm.py  dashboard.py  download_pdf.py  help.py  new_invoice.py  query.py  validate.py
src/emissor/utils/: certificate.py  dps_id.py  formatters.py  registry.py  sequence.py  validators.py
tests/: conftest.py  test_adn_client.py  test_certificate.py  test_cli.py  test_config.py  test_dps_builder.py  test_dps_id.py  test_emission.py  test_formatters.py  test_http_retry.py  test_models.py  test_registry.py  test_sefin_client.py  test_sequence.py  test_validators.py  test_xml_encoder.py  test_xml_signer.py
tests/test_tui/: conftest.py  test_app.py  test_clients.py  test_dashboard.py  test_download_pdf.py  test_help.py  test_new_invoice.py  test_query.py  test_validate.py
