[project]
name = "emissor"
version = "0.1.0"
description = "CLI para emissão automatizada de NFS-e Nacional"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "lxml>=5.0",
    "signxml>=4.0",
    "requests>=2.31",
    "requests-pkcs12>=1.24",
    "cryptography>=42.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "filelock>=3.0",
]

[project.scripts]
emissor = "emissor.cli:cli"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "pyright>=1.1",
    "ruff>=0.11",
    "lxml-stubs>=0.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emissor"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["emissor"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = "py313"
src = ["src", "tests"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["emissor"]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
