[project]
name = "emissor-nacional"
version = "0.1.0"
description = "TUI para emissão de NFS-e via sistema nacional (SEFIN/ADN)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Filipe Amaral" }]
keywords = ["nfse", "invoice", "sefin", "adn", "brazil", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "lxml>=5.0",
    "signxml>=4.0",
    "requests>=2.31",
    "requests-pkcs12>=1.24",
    "cryptography>=42.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "filelock>=3.0",
    "textual>=1.0",
    "platformdirs>=4.0",
]

[project.urls]
Repository = "https://github.com/Itisfilipe/emissor-nacional-cli"
Issues = "https://github.com/Itisfilipe/emissor-nacional-cli/issues"
Changelog = "https://github.com/Itisfilipe/emissor-nacional-cli/blob/main/CHANGELOG.md"

[project.scripts]
emissor-nacional = "emissor.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "pyright>=1.1",
    "ruff>=0.11",
    "lxml-stubs>=0.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emissor"]

[tool.hatch.build.targets.sdist]
include = ["src/emissor", "LICENSE", "README.md", "CHANGELOG.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["emissor"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["emissor"]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
